--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -12,7 +12,7 @@
       }
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TUCKIT</title>
+    <title>resonance | defi</title>
   </head>
   <body>
     <div id="root"></div>
